--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "newsmuncher",
   "version": "0.1.0",
-  "homepage": "https://newsmuncher.eklavyadahiya.com",
+  "homepage": "https://eklavyadahiya.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
