--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
 
 permissions:
   contents: write
@@ -12,20 +16,32 @@ jobs:
   build-and-deploy:
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install and Build 🔧 
+      - name: Install
         run: |
           npm install
           npm run build
 
+      - name: Build
+        run: |
+          npm run build --if-present
+
       - name: Test 
         run: |
           npm run test
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build
+      
+      - name: Deploy
+        run: |
+          git config --global user.name $user_name
+          git config --global user.email $user_email
+          git remote set-url origin https://${github_token}@github.com/${repository}
+          npm run deploy
+        env:
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          github_token: ${{ secrets.WORKFLOW_DEPLOYMENT_TOKEN }}
+          repository: ${{ github.repository }}
