--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
